--- a/southpark.Rmd
+++ b/southpark.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Text Mining South Park for Characteristic Phrases"
 author: "Kaylin Walker • February 5, 2016"
-output: pdf_document
+output: html_document
 ---
 
 ```{r opts, warning=FALSE, message=FALSE, echo=FALSE}
